--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,16 @@
 *.zip
 *.tar.gz
 *.rar
+target/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Intellij Files
+*.iml
+.idea/
+
+# Eclipse Files
+.settings
+.project
+.classpath
