--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?serverTimezone=IST
 spring.datasource.username=root
 spring.datasource.password=careerpower
